# shipping_connector

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt
shipping_connector/: api.py  hooks.py  install.py  modules.txt  tasks.py
shipping_connector/config/: __init__.py  desktop.py
shipping_connector/public/js/: delivery_note.js
shipping_connector/shipping_connector/: __init__.py
shipping_connector/templates/: __init__.py
