[project]
name = "shipping_connector"
authors = [
    { name = "INOOVA GmbH", email = "roland@inoova.it"}
]
description = "Shipping Connector for ERPNext - GLS Integration"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = "version-15"
