[project]
name = "shipping_connector"
authors = [
    { name = "INOOVA GmbH", email = "roland@inoova.it"}
]
description = "Shipping Connector for ERPNext - GLS Integration with Shopify tracking sync"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0-dev,<16.0.0"
erpnext = ">=15.0.0-dev,<16.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
]
ignore = [
    "E501",
    "F401",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
